@@ -2,6 +2,10 @@
 
 v2.2
 ----
+ - HttpQueryTool now interpret dots in keys as parent key and subkey pair
+ - fix: cache key calculation was not always right
+ - internal instance values are now stored using sql column values
+   and aliases can be multiple
  - added an experimental DBResourceLoader Velocity resource loader
  - fix: aliases were not taken into account in Entity.extractColumnValues
  - fix: aliases were never read by the ConfigLoader
